# ielts-super-learner

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/screenshots/: demo.html
ielts_agent/: __init__.py  __main__.py  config.py  main.py  profile.py
ielts_agent/agents/: __init__.py  practice.py  scorer.py  tutor.py
ielts_agent/db/: __init__.py  models.py  schema.py
ielts_agent/llm/: __init__.py  client.py  messages.py
ielts_agent/prompts/: __init__.py  ielts_prompts.py
scripts/: generate_demo.py  validate_claude_md.py
